package com.thebank;

public interface SMSReceiver {

    void receive(SMS message);
}
